# swagger.json
@@ -46,7 +46,16 @@
           "Modules"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Module",
+            "in": "body",
+            "description": "Add a Module",
+            "schema": {
+              "$ref": "#/definitions/Module"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -56,7 +65,16 @@
           "Modules"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Module",
+            "in": "body",
+            "description": "Update a Module",
+            "schema": {
+              "$ref": "#/definitions/Module"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -68,15 +86,11 @@
         "description": "",
         "parameters": [
           {
-            "name": "obj",
+            "name": "Module",
             "in": "body",
+            "description": "Delete Module",
             "schema": {
-              "type": "object",
-              "properties": {
-                "module_id": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Module"
             }
           }
         ],
@@ -89,7 +103,16 @@
           "Modules"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Module",
+            "in": "body",
+            "description": "get details of Module by id",
+            "schema": {
+              "$ref": "#/definitions/Module"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -139,7 +162,16 @@
           "Notifiers"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Notifier",
+            "in": "body",
+            "description": "Add a Notifier",
+            "schema": {
+              "$ref": "#/definitions/Notifier"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -149,7 +181,16 @@
           "Notifiers"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Notifier",
+            "in": "body",
+            "description": "Update a Notifier",
+            "schema": {
+              "$ref": "#/definitions/Notifier"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -161,15 +202,11 @@
         "description": "",
         "parameters": [
           {
-            "name": "obj",
+            "name": "Notifier",
             "in": "body",
+            "description": "Delete Notifier",
             "schema": {
-              "type": "object",
-              "properties": {
-                "notifier_id": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Notifier"
             }
           }
         ],
@@ -182,7 +219,16 @@
           "Notifiers"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Notifier",
+            "in": "body",
+            "description": "get details of Notifier by id",
+            "schema": {
+              "$ref": "#/definitions/Notifier"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -252,7 +298,16 @@
           "Owner_groups"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Owner_group",
+            "in": "body",
+            "description": "Add a Owner_group",
+            "schema": {
+              "$ref": "#/definitions/Owner_group"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -262,7 +317,16 @@
           "Owner_groups"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Owner_group",
+            "in": "body",
+            "description": "Update a Owner_group",
+            "schema": {
+              "$ref": "#/definitions/Owner_group"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -274,15 +338,11 @@
         "description": "",
         "parameters": [
           {
-            "name": "obj",
+            "name": "Owner_group",
             "in": "body",
+            "description": "Delete Owner_group",
             "schema": {
-              "type": "object",
-              "properties": {
-                "owner_group_id": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Owner_group"
             }
           }
         ],
@@ -295,7 +355,16 @@
           "Owner_groups"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Owner_group",
+            "in": "body",
+            "description": "get details of Owner_group by id",
+            "schema": {
+              "$ref": "#/definitions/Owner_group"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -325,7 +394,16 @@
           "Subscribers"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Subscriber",
+            "in": "body",
+            "description": "Add a Subscriber",
+            "schema": {
+              "$ref": "#/definitions/Subscriber"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -335,7 +413,16 @@
           "Subscribers"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Subscriber",
+            "in": "body",
+            "description": "Update a Subscriber",
+            "schema": {
+              "$ref": "#/definitions/Subscriber"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -347,15 +434,11 @@
         "description": "",
         "parameters": [
           {
-            "name": "obj",
+            "name": "Subscriber",
             "in": "body",
+            "description": "Delete Subscriber",
             "schema": {
-              "type": "object",
-              "properties": {
-                "watcher_id": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Subscriber"
             }
           }
         ],
@@ -368,7 +451,16 @@
           "Subscribers"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Subscriber",
+            "in": "body",
+            "description": "get details of Subscriber by id",
+            "schema": {
+              "$ref": "#/definitions/Subscriber"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -438,7 +530,16 @@
           "Watchers"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Watcher",
+            "in": "body",
+            "description": "Add a Watcher",
+            "schema": {
+              "$ref": "#/definitions/Watcher"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -448,7 +549,16 @@
           "Watchers"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Watcher",
+            "in": "body",
+            "description": "Update a Watcher",
+            "schema": {
+              "$ref": "#/definitions/Watcher"
+            }
+          }
+        ],
         "responses": {}
       }
     },
@@ -460,15 +570,11 @@
         "description": "",
         "parameters": [
           {
-            "name": "obj",
+            "name": "Watcher",
             "in": "body",
+            "description": "Delete Watcher",
             "schema": {
-              "type": "object",
-              "properties": {
-                "watcher_id": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Watcher"
             }
           }
         ],
@@ -481,7 +587,16 @@
           "Watchers"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Watcher",
+            "in": "body",
+            "description": "get details of Watcher by id",
+            "schema": {
+              "$ref": "#/definitions/Watcher"
+            }
+          }
+        ],
         "responses": {}
       }
     },
